# webhook-rs

./: .env-client  .env-server  .env.example-server  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config-client-example.toml  config-server-example.toml  docker-compose-server-example.yml
.github/workflows/: build-and-upload.yml
src/: client.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  message.rs  notify.rs  parser.rs  queue.rs  relay.rs  token.rs  tunnel.rs  web.rs  workers.rs
webhook/: Cargo.toml
webhook-client/: Cargo.toml
webhook-client/src/: client.rs  config.rs  context.rs  main.rs
webhook-server/: Cargo.toml
webhook-server/src/: config.rs  context.rs  main.rs  web.rs
webhook/src/: lib.rs  message.rs  queue.rs  token.rs  utils.rs
zerror/: Cargo.toml
zerror/src/: lib.rs
