[package]
name = "webhook-rs"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "webhook-server"
test = false
bench = false

[[bin]]
name = "webhook-client"
test = false
bench = false

[dependencies]
axum = { version = "0.7.7", features = ["macros", "ws"] }
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
toml = "0.8.19"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v7", "std", "fast-rng"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
