[package]
name = "webhook-client"
version = "0.2.3"
edition = "2021"

[dependencies]
axum.workspace = true
chrono.workspace = true
clap.workspace = true
derive_more.workspace = true
futures.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tungstenite.workspace = true
url.workspace = true
uuid.workspace = true
webhook = { path = "../webhook" }
zerror = { path = "../zerror" }
