[package]
name = "webhook-client"
version = "0.2.5"
edition = "2021"

[dependencies]
clap.workspace = true
futures.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tungstenite.workspace = true
webhook = { path = "../webhook" }
