[package]
name = "webhook-server"
version = "0.2.4"
edition = "2021"

[dependencies]
axum.workspace = true
clap.workspace = true
futures.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webhook = { path = "../webhook" }
zerror = { path = "../zerror" }
