[package]
name = "webhook-server"
version = "0.2.6"
edition = "2021"

[dependencies]
axum.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webhook = { path = "../webhook" }
